--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
         <div class="h1-container">
             <h1>joseph padfield</h1>
         </div>
-        <h2>full-stack <br>developer</h2>
-        <h3>project portfolio</h3>
+        <div class="h2-container">
+            <h2>full-stack <br>developer</h2>
+            <h3>project portfolio</h3>
+        </div>
     </div>
     <div class="row-3">
-        <a href='#'>Home</a>
-        <a href='#'>About</a>
-        <a href='#'>Projects</a>
+        <a href='#'>home</a>
+        <a href='#'>about</a>
+        <a href='#'>projects</a>
     </div>
     <div class="row-4">
         <div class='project-container' id='film-quiz'>
-            <div class="overlay"></div>
+            <div class="overlay">
+
+            </div>
         </div>
         <div class='project-container' id='collector-app'>
             <div class="overlay"></div>
@@ -48,10 +52,8 @@
         <p>
             I am a passionate and enthusiastic full-stack developer. After a rewarding 12-year career as an opera
             singer, I decided to turn my lifelong passion for technology into a new career in software development.
-            <br> I recently studied full-stack development at iO Academy in Bath, during which time I worked on a
+            <br><br>I recently studied full-stack development at iO Academy in Bath, during which time I worked on a
             range of projects, both individual and as part of a scrum team.<br>
-            See below for details and links to the live projects and GitHub repositories.
-
 
         </p>
     </div>
