--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             I am a passionate and enthusiastic full-stack developer. After a rewarding 12-year career as an opera
             singer, I decided to turn my lifelong passion for technology into a new career in software development.
             <br><br>I recently studied full-stack development at iO Academy in Bath, during which time I worked on a
-            range of projects, both individual and as part of a scrum team.<br>
+            range of projects, both individual and as part of a scrum team.<br><br>
 
         </p>
     </div>
