some trnasition animations on links, added text to project boxes

--- a/index.html
+++ b/index.html
@@ -37,11 +37,20 @@
     <div class="row-4">
         <div class='project-container' id='film-quiz'>
             <div class="overlay">
-
+                <h3>Famous Last Words</h3>
+                <p>A quiz game made using javascript, html and css.
+                <br><a href="https://joseph-padfield.github.io/movie-quote-quiz-project/">Live version</a>
+                <br><a href="https://github.com/joseph-padfield/movie-quote-quiz-project">GitHub repo</a></p>
             </div>
         </div>
         <div class='project-container' id='collector-app'>
-            <div class="overlay"></div>
+            <div class="overlay">
+                <h3>Reels from the Crypt</h3>
+                <p>This site collects and displays the user's films using a form to enter the details, made using php,
+                    html and css.
+                    <br><a href="https://2024-josephp.dev.io-academy.uk/collection_app/">Live version</a>
+                    <br><a href="https://github.com/joseph-padfield/collection-app-project">GitHub repo</a></p>
+            </div>
         </div>
         <div class='project-container' id='furniture-store'>
             <div class="overlay"></div>
