updates to about section

--- a/index.html
+++ b/index.html
@@ -57,13 +57,16 @@
         </div>
     </div>
     <div class="row-5">
-        <h1>About</h1>
+        <h1>About me</h1>
         <p>
-            I am a passionate and enthusiastic full-stack developer. After a rewarding 12-year career as an opera
-            singer, I decided to turn my lifelong passion for technology into a new career in software development.
-            <br><br>I recently studied full-stack development at iO Academy in Bath, during which time I worked on a
-            range of projects, both individual and as part of a scrum team.<br><br>
-
+            I am a passionate and enthusiastic full-stack developer, recently graduated from an intensive training
+            program at iO Academy in Bath. After a rewarding 12-year career as an opera singer, and driven by a lifelong
+            love of technology, I decided to embark on a new career path in software development.<br><br>
+            During my time at iO Academy I worked on a range of projects, both independently and collaboratively
+            within a scrum team and using a broad range of technologies.<br><br>
+            Combining my skill-set from a long career in the performing arts with the skills and technologies that I
+            have learnt during my time at iO Academy has given me a unique approach to problem-solving and team-work
+            within this field, and I am excited to continue my learning and development as my career progresses.
         </p>
     </div>
 </div>
