new images, minor text changes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             program at iO Academy in Bath. After a rewarding 12-year career as an opera singer, and driven by a lifelong
             love of technology, I decided to embark on a new career path in software development.<br><br>
             During my time at iO Academy I worked on a range of projects, both independently and collaboratively
-            within a scrum team and using a broad range of technologies.<br><br>
+            within a scrum team using a broad range of technologies.<br><br>
             Combining my skill-set from a long career in the performing arts with the skills and technologies that I
             have learnt during my time at iO Academy has given me a unique approach to problem-solving and team-work
             within this field, and I am excited to continue my learning and development as my career progresses.
