added new project, started media query

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <a href='#'>about</a>
         <a href='#'>projects</a>
     </div>
+    <div id="projects-about-container">
     <div class="row-4">
         <div class='project-container' id='film-quiz'>
             <div class="overlay">
@@ -53,21 +54,38 @@
             </div>
         </div>
         <div class='project-container' id='furniture-store'>
-            <div class="overlay"></div>
+            <div class="overlay">
+                <h3>Furniture Store API</h3>
+                <p>This was a back-end project using PHP and working with a pre-made front-end.
+                    <br><a href="https://2024-josephp.dev.io-academy.uk/collection_app/">Live version</a>
+                    <br><a href="https://github.com/joseph-padfield/collection-app-project">GitHub repo</a></p>
+            </div>
+        </div>
+        <div class='project-container' id='job-site'>
+            <div class="overlay">
+                <h3>Job Search</h3>
+                <p>INFO WILL GO HERE
+                    <br><a href="https://2024-thomask.dev.io-academy.uk/dist/">Live version</a>
+                    <br><a href="https://github.com/tking42/2024-jul-fst-job-search-fe">GitHub repo</a></p>
+            </div>
         </div>
     </div>
     <div class="row-5">
-        <h1>About me</h1>
-        <p>
-            I am a passionate and enthusiastic full-stack developer, recently graduated from an intensive training
-            program at iO Academy in Bath. After a rewarding 12-year career as an opera singer, and driven by a lifelong
-            love of technology, I decided to embark on a new career path in software development.<br><br>
-            During my time at iO Academy I worked on a range of projects, both independently and collaboratively
-            within a scrum team using a broad range of technologies.<br><br>
-            Combining my skill-set from a long career in the performing arts with the skills and technologies that I
-            have learnt during my time at iO Academy has given me a unique approach to problem-solving and team-work
-            within this field, and I am excited to continue my learning and development as my career progresses.
-        </p>
+        <div id="about">
+            <h1>About me</h1>
+            <p>
+                I am a passionate and enthusiastic full-stack developer, recently graduated from an intensive training
+                program at iO Academy in Bath. After a rewarding 12-year career as an opera singer, and driven by a lifelong
+                love of technology, I decided to embark on a new career path in software development.<br><br>
+                During my time at iO Academy I worked on a range of projects, both independently and collaboratively
+                within a scrum team using a broad range of technologies.<br><br>
+                Combining my skill-set from a long career in the performing arts with the skills and technologies that I
+                have learnt during my time at iO Academy has given me a unique approach to problem-solving and team-work
+                within this field, and I am excited to continue my learning and development as my career progresses.
+            </p>
+        </div>
+
+    </div>
     </div>
 </div>
 </body>
