--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
     </div>
     <div id="projects-about-container">
     <div class="row-4">
+        <div class='project-container' id='tom-waits-ipsum'>
+            <div class="overlay">
+                <h3>Famous Last Words</h3>
+                <p>A Tom Waits Ipsum Generator built using node.js, html, css.<br>
+                    <br><a href="https://github.com/joseph-padfield/tom-waits-ipsum-generator">GitHub repo</a></p>
+            </div>
+        </div>
         <div class='project-container' id='film-quiz'>
             <div class="overlay">
                 <h3>Famous Last Words</h3>
